--- a/src/pages/template/index.html
+++ b/src/pages/template/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mini Bid</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div id="app"></div>
-  <script src="../dist/main.js"></script></body>
+    <div id="<%= htmlWebpackPlugin.options.reactWrapperId %>"></div>
+  </body>
 </html>
